--- a/analyses.cabal
+++ b/analyses.cabal
@@ -54,6 +54,18 @@ Executable typing_inferencer
                     , cco           >= 0.0.4                                
     Hs-Source-Dirs:   src/                                                  
     Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
+
+Executable typing_typer                                                
+    Main-Is:          Typer.hs                                         
+    Build-Depends:    base          >= 4 && < 5                             
+                    , containers    >= 0.2                                  
+                    , filepath                                              
+                    , uu-parsinglib >= 2.7.1                                
+                    , mtl           >= 1.1.0.2                              
+                    , fgl           >= 5.4.2.3                              
+                    , cco           >= 0.0.4                                
+    Hs-Source-Dirs:   src/                                                  
+    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
                                                                             
 Executable typing_tester                                                    
     Main-Is:          Tester.hs                                             
