--- a/analyses.cabal
+++ b/analyses.cabal
@@ -7,8 +7,8 @@ Description:        Soft Typing for PHP5
 Build-Type:         Simple
 
 
-Executable typing_printer
-    Main-Is:          Printer.hs
+Executable typing_cfgprint
+    Main-Is:          Analysis.hs
     Build-Depends:    base          >= 4 && < 5
                     , containers    >= 0.2
                     , filepath
@@ -18,6 +18,19 @@ Executable typing_printer
                     , cco           >= 0.0.4
     Hs-Source-Dirs:   src/
     Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
+
+
+--Executable typing_printer
+--    Main-Is:          Printer.hs
+--    Build-Depends:    base          >= 4 && < 5
+--                    , containers    >= 0.2
+--                    , filepath
+--                    , uu-parsinglib >= 2.7.1
+--                    , mtl           >= 1.1.0.2
+--                    , fgl           >= 5.4.2.3
+--                    , cco           >= 0.0.4
+--    Hs-Source-Dirs:   src/
+--    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
                                                                             
 -- Executable typing_visualizer                                                
 --     Main-Is:          Visualizer.hs                                         
