--- a/analyses.cabal
+++ b/analyses.cabal
@@ -7,8 +7,8 @@ Description:        Soft Typing for PHP5
 Build-Type:         Simple
 
 
-Executable typing_cfgprint
-    Main-Is:          Analysis.hs
+Executable php5analysis
+    Main-Is:          Main.hs
     Build-Depends:    base          >= 4 && < 5
                     , containers    >= 0.2
                     , filepath
@@ -16,71 +16,12 @@ Executable typing_cfgprint
                     , mtl           >= 1.1.0.2
                     , fgl           >= 5.4.2.3
                     , cco           >= 0.0.4
+                    , cmdargs
+                    , process
     Hs-Source-Dirs:   src/
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
-
-
-Executable typing_printer
-    Main-Is:          Printer.hs
-    Build-Depends:    base          >= 4 && < 5
-                    , containers    >= 0.2
-                    , filepath
-                    , uu-parsinglib >= 2.7.1
-                    , mtl           >= 1.1.0.2
-                    , fgl           >= 5.4.2.3
-                    , cco           >= 0.0.4
-    Hs-Source-Dirs:   src/
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
-                                                                          
-Executable typing_visualizer                                                
-    Main-Is:          Visualizer.hs                                         
-    Build-Depends:    base          >= 4 && < 5                             
-                    , containers    >= 0.2                                  
-                    , filepath                                              
-                    , uu-parsinglib >= 2.7.1                                
-                    , mtl           >= 1.1.0.2                              
-                    , fgl           >= 5.4.2.3                              
-                    , cco           >= 0.0.4                                
-    Hs-Source-Dirs:   src/                                                  
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
-                                                                            
-Executable typing_debugger                                                  
-    Main-Is:          Debugger.hs                                           
-    Build-Depends:    base          >= 4 && < 5                             
-                    , containers    >= 0.2                                  
-                    , filepath                                              
-                    , uu-parsinglib >= 2.7.1                                
-                    , mtl           >= 1.1.0.2                              
-                    , fgl           >= 5.4.2.3                              
-                    , cco           >= 0.0.4                                
-    Hs-Source-Dirs:   src/                                                  
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
-                                                                            
-Executable typing_checker                                                
-    Main-Is:          Checker.hs                                         
-    Build-Depends:    base          >= 4 && < 5                             
-                    , containers    >= 0.2                                  
-                    , filepath                                              
-                    , uu-parsinglib >= 2.7.1                                
-                    , mtl           >= 1.1.0.2                              
-                    , fgl           >= 5.4.2.3                              
-                    , cco           >= 0.0.4                                
-    Hs-Source-Dirs:   src/                                                  
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
-
-Executable typing_typer                                                
-    Main-Is:          Typer.hs                                         
-    Build-Depends:    base          >= 4 && < 5                             
-                    , containers    >= 0.2                                  
-                    , filepath                                              
-                    , uu-parsinglib >= 2.7.1                                
-                    , mtl           >= 1.1.0.2                              
-                    , fgl           >= 5.4.2.3                              
-                    , cco           >= 0.0.4                                
-    Hs-Source-Dirs:   src/                                                  
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
-                                                                            
-Executable typing_tester                                                    
+    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances, DeriveDataTypeable
+                                                                  
+Executable php5analysis_tester                                                    
     Main-Is:          Tester.hs                                             
     Build-Depends:    base          >= 4 && < 5                             
                     , containers    >= 0.2                                  
@@ -91,17 +32,5 @@ Executable typing_tester
                     , cco           >= 0.0.4                                
                     , directory     >= 1.0.1.1                              
                     , process       >= 1.0.1.3                              
-    Hs-Source-Dirs:   src/                                                  
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
-                                                                            
-Executable typing_simplifier                                                
-    Main-Is:          Simplifier.hs                                         
-    Build-Depends:    base          >= 4 && < 5                             
-                    , containers    >= 0.2                                  
-                    , filepath                                              
-                    , uu-parsinglib >= 2.7.1                                
-                    , mtl           >= 1.1.0.2                              
-                    , fgl           >= 5.4.2.3                              
-                    , cco           >= 0.0.4                                
     Hs-Source-Dirs:   src/                                                  
     Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
