--- a/analyses.cabal
+++ b/analyses.cabal
@@ -18,19 +18,21 @@ Executable php5analysis
                     , cco           >= 0.0.4
                     , cmdargs
                     , process
+                    , blaze-html
+                    , directory
     Hs-Source-Dirs:   src/
     Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances, DeriveDataTypeable
                                                                   
-Executable php5analysis_tester                                                    
-    Main-Is:          Tester.hs                                             
-    Build-Depends:    base          >= 4 && < 5                             
-                    , containers    >= 0.2                                  
-                    , filepath                                              
-                    , uu-parsinglib >= 2.7.1                                
-                    , mtl           >= 1.1.0.2                              
-                    , fgl           >= 5.4.2.3                              
-                    , cco           >= 0.0.4                                
-                    , directory     >= 1.0.1.1                              
-                    , process       >= 1.0.1.3                              
-    Hs-Source-Dirs:   src/                                                  
-    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
+-- Executable php5analysis_tester                                                    
+--     Main-Is:          Tester.hs                                             
+--     Build-Depends:    base          >= 4 && < 5                             
+--                     , containers    >= 0.2                                  
+--                     , filepath                                              
+--                     , uu-parsinglib >= 2.7.1                                
+--                     , mtl           >= 1.1.0.2                              
+--                     , fgl           >= 5.4.2.3                              
+--                     , cco           >= 0.0.4                                
+--                     , directory     >= 1.0.1.1                              
+--                     , process       >= 1.0.1.3                              
+--     Hs-Source-Dirs:   src/                                                  
+--     Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
